# x-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: implementation_plan.md  task.md
skills/: leader.md  planner.md  worker.md
tests/: __init__.py  test_config.py  test_models.py  test_orchestrator.py
x_ai_cli/: __init__.py  __main__.py  agent_runner.py  config.py  greeting.py  logger.py  main.py  models.py  orchestrator.py
x_ai_cli/skills/: executor.md
x_ai_cli/tui/: app.py  handler.py  widgets.py
